updating Loic_version

--- a/Documentation/diaboxbib.tex
+++ b/Documentation/diaboxbib.tex
@@ -28,7 +28,7 @@ number = {4},
 pages = {1057}
 }
 
-@techreport{Gouretski2004,
+@TECHREPORT{Gouretski2004,
 author = {Gouretski, V V and Koltermann, K T},
 title = {{WOCE Global Hydrographic Climatology}},
 year = {2004},
